--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /app.py
-    destination: /
+    destination: /home/ec2-user/
 hooks:
   BeforeInstall:
     - location: scripts/start_print
