--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: /app.py
+  - source: /CreateFile.java
     destination: /home/ec2-user/
 hooks:
-  BeforeInstall:
-    - location: scripts/start_print
+  Install:
+    - location: scripts/compile_java
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/run_java
       timeout: 300
       runas: root
