--- a/appspec.yml
+++ b/appspec.yml
@@ -7,8 +7,8 @@ hooks:
   Install:
     - location: scripts/compile_java
       timeout: 300
-      runas: ec2-user
+      runas: root
   ApplicationStart:
     - location: scripts/run_java
       timeout: 300
-      runas: ec2-user
+      runas: root
